--- a/EstudiantesApp/Views/Estudiantes/Index.cshtml
+++ b/EstudiantesApp/Views/Estudiantes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h2 class="text-info">Lista de estudiantes</h2>
 
 <p>
     <a asp-action="Create">Crear un nuevo Estudiante</a>
