--- a/EstudiantesApp/Views/Estudiantes/Index.cshtml
+++ b/EstudiantesApp/Views/Estudiantes/Index.cshtml
@@ -6,6 +6,26 @@
 
 <h2 class="text-info">Lista de estudiantes</h2>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+@if(TempData["Exito"]!=null){
+      <div class="alert alert-success alert-dismissible fade show">
+        <button type="button" class="close" data-dismiss="alert">&times; </button>
+        <strong>Éxito!</strong> @TempData["Exito"]
+      </div>
+
+}
+
+@if (TempData["Error"] != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show">
+        <button type="button" class="close" data-dismiss="alert">&times; </button>
+        <strong>Error!</strong> @TempData["Error"]
+    </div>
+
+}
+
 <p>
     <a asp-action="Create">Crear un nuevo Estudiante</a>
 </p>
@@ -44,9 +64,9 @@
                 @Html.DisplayFor(modelItem => item.FechaInscripcion)
             </td>
             <td>
-                @Html.ActionLink("Edit","Edit", new { id=item.Id  }) |
+                @Html.ActionLink("Editar","Edit", new { id=item.Id  }) |
                 @Html.ActionLink("Detalle","Details", new { id=item.Id  }) |
-                @Html.ActionLink("Delete","Delete", new { id=item.Id })
+                @Html.ActionLink("Eliminar","Delete", new { id=item.Id })
             </td>
         </tr>
 }
